<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name_hint_string"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/buttonUpdateAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/update_string"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/primary"/>

        <Button
            android:id="@+id/buttonDeleteAuthor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/delete_string"
            style="?android:attr/buttonBarButtonStyle"
            android:textColor="@color/primary"/>

    </LinearLayout>

    <Spinner
        android:id="@+id/spinnerCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/countries" />


</LinearLayout>