<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="course.examples.firebase.myhomelibrary.AuthorActivity">

    <TextView
        android:id="@+id/textViewAuthor"
        android:padding="@dimen/activity_horizontal_margin"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_below="@id/textViewAuthor"
        android:id="@+id/editTextName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_title_name"
        android:inputType="text"
        android:importantForAutofill="no" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextName">

        <SeekBar
            android:layout_weight="1"
            android:id="@+id/seekBarRating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:max="5"
            android:min="1"/>

        <TextView
            android:text="@string/low_rating"
            android:id="@+id/textViewRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <Button
        android:id="@+id/buttonAddTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/linearLayout"
        android:text="@string/add_title" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonAddTitle"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/titles_string"
        android:textAlignment="center"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <ListView
        android:id="@+id/listViewTitles"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView" />

</RelativeLayout>